fix: change confirmation z-index

--- a/src/screens/Settings/changeBanner.module.scss
+++ b/src/screens/Settings/changeBanner.module.scss
@@ -9,6 +9,7 @@
   transform: translateX(calc(-#{$settings-left-column-width} - 1rem));
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   background-color: var(--cl-background);
+  z-index: 1100;
 
   button {
     position: absolute;
